--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: ruby
 rvm:
+  - ree
   - 1.8.7
+  - 1.9.2
   - 1.9.3
   - 2.0.0
-  - 2.1.0
+  - 2.1.1
+  - jruby-18mode
+  - jruby-19mode
 addons:
   code_climate:
     repo_token: 4043bdd174c4a44e3f6907accb45c96aade61c3a096db499b72d47f77fc1fead
