--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ rvm:
   - 2.1.1
   - jruby-18mode
   - jruby-19mode
+  - rbx-2
 addons:
   code_climate:
     repo_token: 4043bdd174c4a44e3f6907accb45c96aade61c3a096db499b72d47f77fc1fead
